tests/format/misc/errors/js/import-assertions-for-export-without-from.js
export { foo } assert { type: "json" };
